Latest portfolio section added

--- a/index.html
+++ b/index.html
@@ -248,39 +248,159 @@
 
               How we works
             </button>
-            <h3 class="font-extrabold text-4xl">
-              Our Works Process
-            </h3>
+            <h3 class="font-extrabold text-4xl">Our Works Process</h3>
             <p class="font-medium text-xs">
-              The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication,<br />
+              featuring weathered wood, sleek metal accents.
             </p>
           </div>
           <!-- box part -->
-           <div class="flex gap-5 ml-24 justify-between">
+          <div class="flex gap-5 ml-24 justify-between">
             <div class="bg-[#E7C1D3] rounded-xl space-y-5 h-56 w-72">
-              <img class="ml-5 mt-5" src="./assets/concept.png" alt="">
+              <img class="ml-5 mt-5" src="./assets/concept.png" alt="" />
               <h5 class="font-extrabold ml-5">Concept</h5>
-              <p class="font-medium ml-5">The barn house captivates with its blend of rustic charm and modern.</p>
+              <p class="font-medium ml-5">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
             <div class="bg-[#EFDA6E] rounded-xl space-y-5 h-56 w-72">
-              <img class="ml-5 mt-5" src="./assets/flow-chart.png" alt="">
+              <img class="ml-5 mt-5" src="./assets/flow-chart.png" alt="" />
               <h5 class="font-extrabold ml-5">Design Process</h5>
-              <p class="font-medium ml-5">The barn house captivates with its blend of rustic charm and modern.</p>
+              <p class="font-medium ml-5">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
             <div class="bg-[#A4DAC3] rounded-xl space-y-5 h-56 w-72">
-              <img class="ml-5 mt-5" src="./assets/vision.png" alt="">
+              <img class="ml-5 mt-5" src="./assets/vision.png" alt="" />
               <h5 class="font-extrabold ml-5">Supervision</h5>
-              <p class="font-medium ml-5">The barn house captivates with its blend of rustic charm and modern.</p>
+              <p class="font-medium ml-5">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
             <div class="bg-[#77AAEA] rounded-xl space-y-5 h-56 w-72">
-              <img class="ml-5 mt-5" src="./assets/budget-planning.png" alt="">
+              <img
+                class="ml-5 mt-5"
+                src="./assets/budget-planning.png"
+                alt=""
+              />
               <h5 class="font-extrabold ml-5">Budget-Planning</h5>
-              <p class="font-medium ml-5">The barn house captivates with its blend of rustic charm and modern.</p>
+              <p class="font-medium ml-5">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
-           </div>
+          </div>
+        </section>
+
+
+        <!-- Latest work section-->
+        <section class="xl:w-full lg:w-full m-auto bg-white mt-32 p-32">
+          <div>
+            <div class="text-center space-y-3 mb-10">
+              <button class="btn btn-sm rounded-full bg-[#ABEF5F33]">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                  />
+                </svg>
+
+                Explore our Latest works
+              </button>
+              <h3 class="font-extrabold text-4xl">Our Latest Portfolio</h3>
+              <p class="font-medium text-xs">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication,<br />
+                featuring weathered wood, sleek metal accents.
+              </p>
+            </div>
+            <!-- Commercial div 1&2 -->
+            <div class="space-y-10">
+              <!-- Commercial div 1 -->
+              <div class="lg:flex gap-5">
+                <div class="flex gap-5">
+                  <div>
+                    <img src="./assets/img1.png" alt="" />
+                  </div>
+                  <div class="bg-white rounded-xl space-y-2">
+                    <h3 class="font-extrabold text-xl ml-5 mr-5">Commercial</h3>
+                    <p class="text-base font-medium ml-5 mr-5">
+                      The barn house captivates with its blend of rustic charm and
+                      modern. The barn house captivates with its blend of rustic
+                      charm and modern .
+                    </p>
+                    <a class="btn rounded-full bg-white font-extrabold text-xl ml-5 mr-5"
+                    >View Dtails
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="size-6"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                      />
+                    </svg>
+                  </a>
+                  </div>
+                </div>
+                <div>
+                  <img src="./assets/img2.png" alt="">
+                </div>
+              </div>
+              <!-- Commercial div 2 -->
+               <div class="lg:flex gap-5">
+                <div><img src="./assets/img3.png" alt=""></div>
+                <div><img src="./assets/img4.png" alt=""></div>
+                <div>
+                  <div class="bg-white rounded-xl space-y-2">
+                    <h3 class="font-extrabold text-xl ml-5 mr-5">Commercial</h3>
+                    <p class="text-base font-medium ml-5 mr-5">
+                      The barn house captivates with its blend of rustic charm and
+                      modern. The barn house captivates with its blend of rustic
+                      charm and modern .
+                    </p>
+                    <a class="btn rounded-full bg-white font-extrabold text-xl ml-5 mr-5"
+                    >View Dtails
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="size-6"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                      />
+                    </svg>
+                  </a>
+                  </div>
+                </div>
+                <div><img src="./assets/img5.png" alt=""></div>
+               </div>
+            </div>
+          </div>
         </section>
       </section>
-      
     </main>
     <!-- Footer section -->
     <footer></footer>
