Challenge section added

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
       .font-manrope {
         font-family: "Manrope", sans-serif;
       }
-
-      .section{
-        background-image: url('/assets/bg.jpg');
-      }
     </style>
     <script>
       tailwind.config = {
@@ -674,8 +670,53 @@
           </div>
         </section>
 
+        <!-- Challenge Part -->
+        <section class="flex mt-32 ml-24">
+          <div class="space-y-7 mb-10 w-[50%]">
+            <h3 class="font-extrabold text-3xl">
+              <span class="text-5xl font-normal">Consult</span> With Our
+              <span class="text-5xl font-normal">Exparts</span>
+            </h3>
+            <p class="font-medium text-xs bg-white rounded-xl p-7">
+              At <span class="text-2xl">Rinterio,</span> we specialize in both
+              commercial and residential design, <br />creating spaces that
+              seamlessly blend rustic charm with modern sophistication. <br />
+              Our unique approach to design combines the warmth of weathered
+              wood with the sleekness of metal accents, <br />
+              resulting in captivating environments that are both inviting and
+              stylish.
+            </p>
+            <div>
+              <a class="btn rounded-full bg-white font-extrabold text-xl"
+                >Let's chat
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div>
+            <img class="pl-32" src="./assets/business.jpg" alt="" />
+          </div>
+        </section>
+
         <!-- Form section -->
-        <section class="xl:w-full lg:w-full m-auto  mt-32 p-32" style="background-image: url('assets/bg.jpg');">
+        <section
+          class="xl:w-full lg:w-full m-auto mt-32 p-32"
+          style="background-image: url('assets/bg.jpg')"
+        >
           <div class="text-center space-y-3 mb-10">
             <button class="btn btn-sm rounded-full bg-[#ABEF5F33]">
               <svg
